Deploy preview for PR 37 🛫

--- a/pr-preview/pr-37/collaborating/peer-code-review.html
+++ b/pr-preview/pr-37/collaborating/peer-code-review.html
@@ -212,7 +212,7 @@ For example, you might ask the reviewer to address one or more of the following 
 </div>
 <h2 id="finding-a-reviewer"><a class="header" href="#finding-a-reviewer">Finding a reviewer</a></h2>
 <p>On GitHub we have started a <a href="https://github.com/orgs/spectrum-spark/teams/peer-review">peer-review team</a>.
-We encourage you to post on the discussion board, to find likeminded members to review your code. </p>
+We encourage you to post on the discussion board, to find like-minded members to review your code. </p>
 <h2 id="guidelines-for-reviewing-other-peoples-code"><a class="header" href="#guidelines-for-reviewing-other-peoples-code">Guidelines for reviewing other people's code</a></h2>
 <p>Peer code review is an opportunity for the author and the reviewer to <strong>learn from each other</strong> and improve a piece of code.</p>
 <div id="admonition-tip-2" class="admonition tip">
