--- a/pr-preview/pr-44/collaborating/continuous-integration.html
+++ b/pr-preview/pr-44/collaborating/continuous-integration.html
@@ -27,7 +27,8 @@
         <!-- Custom theme stylesheets -->
         <link rel="stylesheet" href="../mdbook-admonish.css">
         <link rel="stylesheet" href="../tabbed-code-blocks.css">
-        <link rel="stylesheet" href="../asciinema-player.css">
+        <link rel="stylesheet" href="../asciinema/asciinema-player.css">
+        <link rel="stylesheet" href="../asciinema/asciinema-theme-dracula.css">
     </head>
     <body>
         <!-- Provide site root to javascript -->
@@ -199,6 +200,6 @@ We added this feature in <a href="https://github.com/robmoss/git-is-my-lab-book/
 
         <!-- Custom JS scripts -->
         <script type="text/javascript" src="../tabbed-code-blocks.js"></script>
-        <script type="text/javascript" src="../asciinema-player.min.js"></script>
+        <script type="text/javascript" src="../asciinema/asciinema-player.min.js"></script>
     </body>
 </html>
