--- a/pr-preview/pr-44/prerequisites.html
+++ b/pr-preview/pr-44/prerequisites.html
@@ -27,7 +27,8 @@
         <!-- Custom theme stylesheets -->
         <link rel="stylesheet" href="mdbook-admonish.css">
         <link rel="stylesheet" href="tabbed-code-blocks.css">
-        <link rel="stylesheet" href="asciinema-player.css">
+        <link rel="stylesheet" href="asciinema/asciinema-player.css">
+        <link rel="stylesheet" href="asciinema/asciinema-theme-dracula.css">
     </head>
     <body>
         <!-- Provide site root to javascript -->
@@ -206,6 +207,6 @@ You should be comfortable with using the command-line to perform the following t
 
         <!-- Custom JS scripts -->
         <script type="text/javascript" src="tabbed-code-blocks.js"></script>
-        <script type="text/javascript" src="asciinema-player.min.js"></script>
+        <script type="text/javascript" src="asciinema/asciinema-player.min.js"></script>
     </body>
 </html>
