--- a/pr-preview/pr-44/using-git/first-time-git-setup.html
+++ b/pr-preview/pr-44/using-git/first-time-git-setup.html
@@ -27,7 +27,8 @@
         <!-- Custom theme stylesheets -->
         <link rel="stylesheet" href="../mdbook-admonish.css">
         <link rel="stylesheet" href="../tabbed-code-blocks.css">
-        <link rel="stylesheet" href="../asciinema-player.css">
+        <link rel="stylesheet" href="../asciinema/asciinema-player.css">
+        <link rel="stylesheet" href="../asciinema/asciinema-theme-dracula.css">
     </head>
     <body>
         <!-- Provide site root to javascript -->
@@ -227,6 +228,6 @@ See <em>Git in other environments</em>, Appendix A of the <a href="https://git-s
 
         <!-- Custom JS scripts -->
         <script type="text/javascript" src="../tabbed-code-blocks.js"></script>
-        <script type="text/javascript" src="../asciinema-player.min.js"></script>
+        <script type="text/javascript" src="../asciinema/asciinema-player.min.js"></script>
     </body>
 </html>
