--- a/pr-preview/pr-44/using-git/where-did-this-line-come-from.html
+++ b/pr-preview/pr-44/using-git/where-did-this-line-come-from.html
@@ -27,7 +27,8 @@
         <!-- Custom theme stylesheets -->
         <link rel="stylesheet" href="../mdbook-admonish.css">
         <link rel="stylesheet" href="../tabbed-code-blocks.css">
-        <link rel="stylesheet" href="../asciinema-player.css">
+        <link rel="stylesheet" href="../asciinema/asciinema-player.css">
+        <link rel="stylesheet" href="../asciinema/asciinema-theme-dracula.css">
     </head>
     <body>
         <!-- Provide site root to javascript -->
@@ -194,7 +195,7 @@ document.addEventListener("DOMContentLoaded", function(){
     AsciinemaPlayer.create(
         'where-did-this-line-come-from.cast',
         document.getElementById('demo'),
-        { poster: 'npt:0:1' });
+        { poster: 'npt:0:1', theme: 'dracula' });
 });
 </script>
 </div>
@@ -237,6 +238,6 @@ document.addEventListener("DOMContentLoaded", function(){
 
         <!-- Custom JS scripts -->
         <script type="text/javascript" src="../tabbed-code-blocks.js"></script>
-        <script type="text/javascript" src="../asciinema-player.min.js"></script>
+        <script type="text/javascript" src="../asciinema/asciinema-player.min.js"></script>
     </body>
 </html>
