--- a/pr-preview/pr-44/version-control/what-is-a-branch.html
+++ b/pr-preview/pr-44/version-control/what-is-a-branch.html
@@ -27,7 +27,8 @@
         <!-- Custom theme stylesheets -->
         <link rel="stylesheet" href="../mdbook-admonish.css">
         <link rel="stylesheet" href="../tabbed-code-blocks.css">
-        <link rel="stylesheet" href="../asciinema-player.css">
+        <link rel="stylesheet" href="../asciinema/asciinema-player.css">
+        <link rel="stylesheet" href="../asciinema/asciinema-theme-dracula.css">
     </head>
     <body>
         <!-- Provide site root to javascript -->
@@ -205,6 +206,6 @@ This means that your main branch now contains six commits (A to F), and you can 
 
         <!-- Custom JS scripts -->
         <script type="text/javascript" src="../tabbed-code-blocks.js"></script>
-        <script type="text/javascript" src="../asciinema-player.min.js"></script>
+        <script type="text/javascript" src="../asciinema/asciinema-player.min.js"></script>
     </body>
 </html>
