Deploy preview for PR 44 🛫

--- a/pr-preview/pr-44/how-to-contribute.html
+++ b/pr-preview/pr-44/how-to-contribute.html
@@ -248,7 +248,7 @@ int main() {
 }
 </code></pre></pre>
 </div>
-<h2 id="adding-recorded-demos"><a class="header" href="#adding-recorded-demos">Adding recorded demos</a></h2>
+<h2 id="adding-terminal-session-recordings"><a class="header" href="#adding-terminal-session-recordings">Adding terminal session recordings</a></h2>
 <p>You can use <a href="https://asciinema.org/">asciinema</a> to record a terminal session, and display this recorded session with a small amount of HTML and JavaScript.
 For example, the following code is used to display the <code>where-did-this-line-come-from.cast</code> recording in a tab called &quot;Video demonstration&quot;, as shown in <a href="using-git/where-did-this-line-come-from.html">Where did this line come from?</a> chapter:</p>
 <pre><code class="language-md">&lt;div class=&quot;tabbed-blocks&quot;&gt;
