Deploy preview for PR 44 🛫

--- a/pr-preview/pr-44/case-studies/campbell-pen-and-paper-version-control.html
+++ b/pr-preview/pr-44/case-studies/campbell-pen-and-paper-version-control.html
@@ -221,6 +221,7 @@ While keeping an immaculate record of changes that I had made was invaluable, im
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
