--- a/pr-preview/pr-44/case-studies/moss-incorrect-data-pre-print.html
+++ b/pr-preview/pr-44/case-studies/moss-incorrect-data-pre-print.html
@@ -216,6 +216,7 @@ This greatly simplified the review process, and ensured that we were inspecting 
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
