--- a/pr-preview/pr-44/collaborating/an-example-pull-request.html
+++ b/pr-preview/pr-44/collaborating/an-example-pull-request.html
@@ -226,6 +226,7 @@
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
