--- a/pr-preview/pr-44/collaborating/coding-style-guides.html
+++ b/pr-preview/pr-44/collaborating/coding-style-guides.html
@@ -231,6 +231,7 @@ It can also make code <strong>easier to read</strong>, because consistent stylin
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
