--- a/pr-preview/pr-44/collaborating/collaborating-on-a-paper.html
+++ b/pr-preview/pr-44/collaborating/collaborating-on-a-paper.html
@@ -230,6 +230,7 @@ This approach is particularly useful if you are writing a paper in LaTeX.</p>
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
