--- a/pr-preview/pr-44/collaborating/continuous-integration.html
+++ b/pr-preview/pr-44/collaborating/continuous-integration.html
@@ -216,6 +216,7 @@ We added this feature in <a href="https://github.com/robmoss/git-is-my-lab-book/
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
