--- a/pr-preview/pr-44/collaborating/merge-pull-requests.html
+++ b/pr-preview/pr-44/collaborating/merge-pull-requests.html
@@ -274,6 +274,7 @@ This should be located on the right-hand side, above the list of files.</p>
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
