--- a/pr-preview/pr-44/collaborating/peer-code-review.html
+++ b/pr-preview/pr-44/collaborating/peer-code-review.html
@@ -328,6 +328,7 @@ This can be a useful reference for future code reviews.</p>
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
