--- a/pr-preview/pr-44/collaborating/sharing-a-branch.html
+++ b/pr-preview/pr-44/collaborating/sharing-a-branch.html
@@ -234,6 +234,7 @@ Remember that you can merge commits from their branch into your own branches at 
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
