--- a/pr-preview/pr-44/high-performance-computing/index.html
+++ b/pr-preview/pr-44/high-performance-computing/index.html
@@ -203,6 +203,7 @@ It also demonstrates how to use version control to ensure that the code running 
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
