--- a/pr-preview/pr-44/how-to-contribute.html
+++ b/pr-preview/pr-44/how-to-contribute.html
@@ -318,6 +318,7 @@ document.addEventListener(&quot;DOMContentLoaded&quot;, function(){
         <!-- Custom JS scripts -->
         <script src="tabbed-code-blocks.js"></script>
         <script src="asciinema/asciinema-player.min.js"></script>
+        <script src="asciinema/wrapper.js"></script>
 
 
     </body>
