--- a/pr-preview/pr-44/index.html
+++ b/pr-preview/pr-44/index.html
@@ -234,6 +234,7 @@ early- and mid-career researchers (EMCRs) in the
         <!-- Custom JS scripts -->
         <script src="tabbed-code-blocks.js"></script>
         <script src="asciinema/asciinema-player.min.js"></script>
+        <script src="asciinema/wrapper.js"></script>
 
 
     </body>
