--- a/pr-preview/pr-44/learning-objectives.html
+++ b/pr-preview/pr-44/learning-objectives.html
@@ -270,6 +270,7 @@ This includes being able to:</p>
         <!-- Custom JS scripts -->
         <script src="tabbed-code-blocks.js"></script>
         <script src="asciinema/asciinema-player.min.js"></script>
+        <script src="asciinema/wrapper.js"></script>
 
 
     </body>
