--- a/pr-preview/pr-44/prerequisites.html
+++ b/pr-preview/pr-44/prerequisites.html
@@ -223,6 +223,7 @@ You should be comfortable with using the command-line to perform the following t
         <!-- Custom JS scripts -->
         <script src="tabbed-code-blocks.js"></script>
         <script src="asciinema/asciinema-player.min.js"></script>
+        <script src="asciinema/wrapper.js"></script>
 
 
     </body>
