--- a/pr-preview/pr-44/references.html
+++ b/pr-preview/pr-44/references.html
@@ -272,6 +272,7 @@ of software: a software citation guide</a> provides further examples and guidanc
         <!-- Custom JS scripts -->
         <script src="tabbed-code-blocks.js"></script>
         <script src="asciinema/asciinema-player.min.js"></script>
+        <script src="asciinema/wrapper.js"></script>
 
 
     </body>
