--- a/pr-preview/pr-44/testing/index.html
+++ b/pr-preview/pr-44/testing/index.html
@@ -214,6 +214,7 @@ Tests check whether your code behaves as intended, and can warn you if you intro
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
