--- a/pr-preview/pr-44/using-git/cloning-an-existing-repository.html
+++ b/pr-preview/pr-44/using-git/cloning-an-existing-repository.html
@@ -234,6 +234,7 @@ This will allow you to push commits to the remote repository (if you are permitt
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
