--- a/pr-preview/pr-44/using-git/creating-a-commit.html
+++ b/pr-preview/pr-44/using-git/creating-a-commit.html
@@ -328,6 +328,7 @@ Instead, record a new commit that includes the desired changes.</p>
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
