--- a/pr-preview/pr-44/using-git/creating-a-remote-repository.html
+++ b/pr-preview/pr-44/using-git/creating-a-remote-repository.html
@@ -239,6 +239,7 @@ We also provide an example, below.</p>
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
