--- a/pr-preview/pr-44/using-git/creating-a-repository.html
+++ b/pr-preview/pr-44/using-git/creating-a-repository.html
@@ -225,6 +225,7 @@ This will create a <code>.git</code> directory that will contain all of the repo
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
