--- a/pr-preview/pr-44/using-git/exercise-create-a-local-repository.html
+++ b/pr-preview/pr-44/using-git/exercise-create-a-local-repository.html
@@ -293,6 +293,7 @@ Record your changes in a new commit.</p>
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
