--- a/pr-preview/pr-44/using-git/exercise-resolve-a-merge-conflict.html
+++ b/pr-preview/pr-44/using-git/exercise-resolve-a-merge-conflict.html
@@ -295,6 +295,7 @@ You can inspect this commit by running:</p>
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
