--- a/pr-preview/pr-44/using-git/exercise-use-a-remote-repository.html
+++ b/pr-preview/pr-44/using-git/exercise-use-a-remote-repository.html
@@ -283,6 +283,7 @@ You can use this workflow to <a href="../collaborating/">collaborate with collea
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
