--- a/pr-preview/pr-44/using-git/first-time-git-setup.html
+++ b/pr-preview/pr-44/using-git/first-time-git-setup.html
@@ -255,6 +255,7 @@ See <em>Git in other environments</em>, Appendix A of the <a href="https://git-s
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
