--- a/pr-preview/pr-44/using-git/graphical-git-clients.html
+++ b/pr-preview/pr-44/using-git/graphical-git-clients.html
@@ -215,6 +215,7 @@ If you don't have Git already installed on your computer, see these <a href="htt
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
