--- a/pr-preview/pr-44/using-git/how-to-create-and-use-tags.html
+++ b/pr-preview/pr-44/using-git/how-to-create-and-use-tags.html
@@ -252,6 +252,7 @@ For example, you can inspect your commit history by running:</p>
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
