--- a/pr-preview/pr-44/using-git/how-to-resolve-merge-conflicts.html
+++ b/pr-preview/pr-44/using-git/how-to-resolve-merge-conflicts.html
@@ -261,6 +261,7 @@ git commit -m &quot;Resolved the merge conflict&quot;
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
