--- a/pr-preview/pr-44/using-git/how-to-structure-a-repository.html
+++ b/pr-preview/pr-44/using-git/how-to-structure-a-repository.html
@@ -249,6 +249,7 @@ Help your collaborators understand where they need to look in order to find some
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
