--- a/pr-preview/pr-44/using-git/how-to-use-branches.html
+++ b/pr-preview/pr-44/using-git/how-to-use-branches.html
@@ -289,6 +289,7 @@ You can them merge the changes <strong>from</strong> another branch (in this exa
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
