--- a/pr-preview/pr-44/using-git/inspecting-your-history.html
+++ b/pr-preview/pr-44/using-git/inspecting-your-history.html
@@ -338,6 +338,7 @@ index 7956b65..a34f907 100644
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
