--- a/pr-preview/pr-44/using-git/pushing-and-pulling-commits.html
+++ b/pr-preview/pr-44/using-git/pushing-and-pulling-commits.html
@@ -258,6 +258,7 @@ This situation <strong>should not arise</strong> in general, and typically indic
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
