--- a/pr-preview/pr-44/using-git/where-did-this-problem-come-from.html
+++ b/pr-preview/pr-44/using-git/where-did-this-problem-come-from.html
@@ -292,6 +292,7 @@ Date:   Sun Apr 17 21:41:43 2022 +1000
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
