--- a/pr-preview/pr-44/version-control/exercise-using-version-control.html
+++ b/pr-preview/pr-44/version-control/exercise-using-version-control.html
@@ -250,6 +250,7 @@ For example:</p>
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
