--- a/pr-preview/pr-44/version-control/how-do-I-write-a-commit-message.html
+++ b/pr-preview/pr-44/version-control/how-do-I-write-a-commit-message.html
@@ -233,6 +233,7 @@ what the age effects might be.</p>
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
