--- a/pr-preview/pr-44/version-control/what-is-a-branch.html
+++ b/pr-preview/pr-44/version-control/what-is-a-branch.html
@@ -222,6 +222,7 @@ This means that your main branch now contains six commits (A to F), and you can 
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
