--- a/pr-preview/pr-44/version-control/what-is-a-repository.html
+++ b/pr-preview/pr-44/version-control/what-is-a-repository.html
@@ -217,6 +217,7 @@ This is one way in which you can use version control to work collaboratively on 
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
