--- a/pr-preview/pr-44/version-control/what-is-version-control.html
+++ b/pr-preview/pr-44/version-control/what-is-version-control.html
@@ -226,6 +226,7 @@ This is extremely helpful for people — <strong>including you!</strong> — who
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
