--- a/pr-preview/pr-44/case-studies/moss-pypfilt-earlier-states.html
+++ b/pr-preview/pr-44/case-studies/moss-pypfilt-earlier-states.html
@@ -286,6 +286,7 @@ for i in range(1, steps):
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
