--- a/pr-preview/pr-44/collaborating/sharing-a-repository.html
+++ b/pr-preview/pr-44/collaborating/sharing-a-repository.html
@@ -250,6 +250,7 @@ If they accept this invitation, they will have access to your repository.</p>
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
