--- a/pr-preview/pr-44/print.html
+++ b/pr-preview/pr-44/print.html
@@ -606,15 +606,20 @@ It is entirely separate from your choice of editor for any other task, such as w
 </div>
 </div>
 <div class="tabbed-blocks">
-<div id="demo" class="tabbed-block" data-tab-title="Git editor example"></div>
+<div class="tabbed-block" data-tab-title="Git editor example">
+  <div id="demo"></div>
+<p>Video timeline:</p>
+<ol>
+    <li><a data-video="demo" data-seek-to="4" href="javascript:;">Overview</a></li>
+    <li><a data-video="demo" data-seek-to="17" href="javascript:;">Show how to use nano</a></li>
+    <li><a data-video="demo" data-seek-to="71" href="javascript:;">Show how to use vim</a></li>
+  </ol>
 <script>
-document.addEventListener("DOMContentLoaded", function(){
-    AsciinemaPlayer.create(
-        'git-editor-example.cast',
-        document.getElementById('demo'),
-        { poster: 'npt:0:1', theme: 'dracula' });
-});
-</script>
+  document.addEventListener("DOMContentLoaded", function(){
+      addAsciinemaPlayer('git-editor-example.cast', 'demo');
+  });
+  </script>
+</div>
 </div>
 <h2 id="how-to-use-nano"><a class="header" href="#how-to-use-nano">How to use nano</a></h2>
 <p>Once you have written your commit message, press <kbd>Ctrl</kbd> + <kbd>O</kbd> and then <kbd>Enter</kbd> to save the commit message, then press <kbd>Ctrl</kbd> + <kbd>X</kbd> to quit the editor.</p>
@@ -2616,6 +2621,7 @@ of software: a software citation guide</a> provides further examples and guidanc
         <!-- Custom JS scripts -->
         <script src="tabbed-code-blocks.js"></script>
         <script src="asciinema/asciinema-player.min.js"></script>
+        <script src="asciinema/wrapper.js"></script>
 
         <script>
         window.addEventListener('load', function() {
