--- a/pr-preview/pr-44/using-git/choosing-a-license.html
+++ b/pr-preview/pr-44/using-git/choosing-a-license.html
@@ -226,6 +226,7 @@ But it is usually straightforward to narrow down your options.</p>
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
