--- a/pr-preview/pr-44/using-git/how-to-ignore-certain-files.html
+++ b/pr-preview/pr-44/using-git/how-to-ignore-certain-files.html
@@ -256,6 +256,7 @@ sensitive-data
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
