--- a/pr-preview/pr-44/version-control/what-is-a-commit.html
+++ b/pr-preview/pr-44/version-control/what-is-a-commit.html
@@ -211,6 +211,7 @@ These changes can include:</p>
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
