--- a/pr-preview/pr-44/version-control/what-is-a-merge-conflict.html
+++ b/pr-preview/pr-44/version-control/what-is-a-merge-conflict.html
@@ -223,6 +223,7 @@ This means that we need to decide what the true result should be, edit the file 
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
