--- a/pr-preview/pr-44/version-control/what-is-a-tag.html
+++ b/pr-preview/pr-44/version-control/what-is-a-tag.html
@@ -212,6 +212,7 @@ Common uses of tags include:</p>
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
