--- a/pr-preview/pr-44/version-control/what-should-I-commit.html
+++ b/pr-preview/pr-44/version-control/what-should-I-commit.html
@@ -223,6 +223,7 @@
         <!-- Custom JS scripts -->
         <script src="../tabbed-code-blocks.js"></script>
         <script src="../asciinema/asciinema-player.min.js"></script>
+        <script src="../asciinema/wrapper.js"></script>
 
 
     </body>
