Deploy preview for PR 44 🛫

--- a/pr-preview/pr-44/how-to-contribute.html
+++ b/pr-preview/pr-44/how-to-contribute.html
@@ -257,15 +257,14 @@ int main() {
 For example, the following code is used to display the <code>where-did-this-line-come-from.cast</code> recording in a tab called &quot;Video demonstration&quot;, as shown in <a href="using-git/where-did-this-line-come-from.html">Where did this line come from?</a> chapter:</p>
 <pre><code class="language-md">&lt;div class=&quot;tabbed-blocks&quot;&gt;
 
-&lt;div id=&quot;demo&quot; class=&quot;tabbed-block&quot; data-tab-title=&quot;Video demonstration&quot;&gt;&lt;/div&gt;
-&lt;script&gt;
-document.addEventListener(&quot;DOMContentLoaded&quot;, function(){
-    AsciinemaPlayer.create(
-        'where-did-this-line-come-from.cast',
-        document.getElementById('demo'),
-        { poster: 'npt:0:1', theme: 'dracula' });
-});
-&lt;/script&gt;
+&lt;div class=&quot;tabbed-block&quot; data-tab-title=&quot;Video demonstration&quot;&gt;
+  &lt;div id=&quot;demo&quot;&gt;&lt;/div&gt;
+  &lt;script&gt;
+  document.addEventListener(&quot;DOMContentLoaded&quot;, function(){
+      addAsciinemaPlayer('where-did-this-line-come-from.cast', 'demo');
+  });
+  &lt;/script&gt;
+&lt;/div&gt;
 
 &lt;/div&gt;
 </code></pre>
