--- a/pr-preview/pr-44/print.html
+++ b/pr-preview/pr-44/print.html
@@ -1280,15 +1280,14 @@ So the text that we're interested in (line 9) was <strong>introduced by commit <
 <pre><code class="language-sh">git show 3dfff1f
 </code></pre>
 <div class="tabbed-blocks">
-<div id="demo" class="tabbed-block" data-tab-title="Video demonstration"></div>
-<script>
-document.addEventListener("DOMContentLoaded", function(){
-    AsciinemaPlayer.create(
-        'where-did-this-line-come-from.cast',
-        document.getElementById('demo'),
-        { poster: 'npt:0:1', theme: 'dracula' });
-});
-</script>
+<div class="tabbed-block" data-tab-title="Video demonstration">
+  <div id="demo"></div>
+  <script>
+  document.addEventListener("DOMContentLoaded", function(){
+      addAsciinemaPlayer('where-did-this-line-come-from.cast', 'demo');
+  });
+  </script>
+</div>
 </div>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="where-did-this-problem-come-from"><a class="header" href="#where-did-this-problem-come-from">Where did this problem come from?</a></h1>
 <p>Let's find the commit that created the file <code>src/version-control/what-is-a-repository.md</code>.
@@ -2485,15 +2484,14 @@ int main() {
 For example, the following code is used to display the <code>where-did-this-line-come-from.cast</code> recording in a tab called &quot;Video demonstration&quot;, as shown in <a href="using-git/where-did-this-line-come-from.html">Where did this line come from?</a> chapter:</p>
 <pre><code class="language-md">&lt;div class=&quot;tabbed-blocks&quot;&gt;
 
-&lt;div id=&quot;demo&quot; class=&quot;tabbed-block&quot; data-tab-title=&quot;Video demonstration&quot;&gt;&lt;/div&gt;
-&lt;script&gt;
-document.addEventListener(&quot;DOMContentLoaded&quot;, function(){
-    AsciinemaPlayer.create(
-        'where-did-this-line-come-from.cast',
-        document.getElementById('demo'),
-        { poster: 'npt:0:1', theme: 'dracula' });
-});
-&lt;/script&gt;
+&lt;div class=&quot;tabbed-block&quot; data-tab-title=&quot;Video demonstration&quot;&gt;
+  &lt;div id=&quot;demo&quot;&gt;&lt;/div&gt;
+  &lt;script&gt;
+  document.addEventListener(&quot;DOMContentLoaded&quot;, function(){
+      addAsciinemaPlayer('where-did-this-line-come-from.cast', 'demo');
+  });
+  &lt;/script&gt;
+&lt;/div&gt;
 
 &lt;/div&gt;
 </code></pre>
