--- a/pr-preview/pr-44/using-git/where-did-this-line-come-from.html
+++ b/pr-preview/pr-44/using-git/where-did-this-line-come-from.html
@@ -196,15 +196,14 @@ So the text that we're interested in (line 9) was <strong>introduced by commit <
 <pre><code class="language-sh">git show 3dfff1f
 </code></pre>
 <div class="tabbed-blocks">
-<div id="demo" class="tabbed-block" data-tab-title="Video demonstration"></div>
-<script>
-document.addEventListener("DOMContentLoaded", function(){
-    AsciinemaPlayer.create(
-        'where-did-this-line-come-from.cast',
-        document.getElementById('demo'),
-        { poster: 'npt:0:1', theme: 'dracula' });
-});
-</script>
+<div class="tabbed-block" data-tab-title="Video demonstration">
+  <div id="demo"></div>
+  <script>
+  document.addEventListener("DOMContentLoaded", function(){
+      addAsciinemaPlayer('where-did-this-line-come-from.cast', 'demo');
+  });
+  </script>
+</div>
 </div>
 
                     </main>
