Deploy preview for PR 44 🛫

--- a/pr-preview/pr-44/how-to-contribute.html
+++ b/pr-preview/pr-44/how-to-contribute.html
@@ -258,12 +258,7 @@ For example, the following code is used to display the <code>where-did-this-line
 <pre><code class="language-md">&lt;div class=&quot;tabbed-blocks&quot;&gt;
 
 &lt;div class=&quot;tabbed-block&quot; data-tab-title=&quot;Video demonstration&quot;&gt;
-  &lt;div id=&quot;demo&quot;&gt;&lt;/div&gt;
-  &lt;script&gt;
-  document.addEventListener(&quot;DOMContentLoaded&quot;, function(){
-      addAsciinemaPlayer('where-did-this-line-come-from.cast', 'demo');
-  });
-  &lt;/script&gt;
+  &lt;div id=&quot;demo&quot; data-cast-file=&quot;where-did-this-line-come-from.cast&quot;&gt;&lt;/div&gt;
 &lt;/div&gt;
 
 &lt;/div&gt;
