--- a/pr-preview/pr-44/using-git/choosing-your-git-editor.html
+++ b/pr-preview/pr-44/using-git/choosing-your-git-editor.html
@@ -166,18 +166,13 @@ It is entirely separate from your choice of editor for any other task, such as w
 </div>
 <div class="tabbed-blocks">
 <div class="tabbed-block" data-tab-title="Git editor example">
-  <div id="demo"></div>
+  <div id="demo" data-cast-file="git-editor-example.cast"></div>
 <p>Video timeline:</p>
 <ol>
     <li><a data-video="demo" data-seek-to="4" href="javascript:;">Overview</a></li>
     <li><a data-video="demo" data-seek-to="17" href="javascript:;">Show how to use nano</a></li>
     <li><a data-video="demo" data-seek-to="71" href="javascript:;">Show how to use vim</a></li>
   </ol>
-<script>
-  document.addEventListener("DOMContentLoaded", function(){
-      addAsciinemaPlayer('git-editor-example.cast', 'demo');
-  });
-  </script>
 </div>
 </div>
 <h2 id="how-to-use-nano"><a class="header" href="#how-to-use-nano">How to use nano</a></h2>
