--- a/pr-preview/pr-44/using-git/where-did-this-line-come-from.html
+++ b/pr-preview/pr-44/using-git/where-did-this-line-come-from.html
@@ -197,12 +197,7 @@ So the text that we're interested in (line 9) was <strong>introduced by commit <
 </code></pre>
 <div class="tabbed-blocks">
 <div class="tabbed-block" data-tab-title="Video demonstration">
-  <div id="demo"></div>
-  <script>
-  document.addEventListener("DOMContentLoaded", function(){
-      addAsciinemaPlayer('where-did-this-line-come-from.cast', 'demo');
-  });
-  </script>
+  <div id="demo" data-cast-file="where-did-this-line-come-from.cast"></div>
 </div>
 </div>
 
