--- a/pr-preview/pr-44/print.html
+++ b/pr-preview/pr-44/print.html
@@ -607,18 +607,13 @@ It is entirely separate from your choice of editor for any other task, such as w
 </div>
 <div class="tabbed-blocks">
 <div class="tabbed-block" data-tab-title="Git editor example">
-  <div id="demo"></div>
+  <div id="demo" data-cast-file="git-editor-example.cast"></div>
 <p>Video timeline:</p>
 <ol>
     <li><a data-video="demo" data-seek-to="4" href="javascript:;">Overview</a></li>
     <li><a data-video="demo" data-seek-to="17" href="javascript:;">Show how to use nano</a></li>
     <li><a data-video="demo" data-seek-to="71" href="javascript:;">Show how to use vim</a></li>
   </ol>
-<script>
-  document.addEventListener("DOMContentLoaded", function(){
-      addAsciinemaPlayer('git-editor-example.cast', 'demo');
-  });
-  </script>
 </div>
 </div>
 <h2 id="how-to-use-nano"><a class="header" href="#how-to-use-nano">How to use nano</a></h2>
@@ -1281,12 +1276,7 @@ So the text that we're interested in (line 9) was <strong>introduced by commit <
 </code></pre>
 <div class="tabbed-blocks">
 <div class="tabbed-block" data-tab-title="Video demonstration">
-  <div id="demo"></div>
-  <script>
-  document.addEventListener("DOMContentLoaded", function(){
-      addAsciinemaPlayer('where-did-this-line-come-from.cast', 'demo');
-  });
-  </script>
+  <div id="demo" data-cast-file="where-did-this-line-come-from.cast"></div>
 </div>
 </div>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="where-did-this-problem-come-from"><a class="header" href="#where-did-this-problem-come-from">Where did this problem come from?</a></h1>
@@ -2485,12 +2475,7 @@ For example, the following code is used to display the <code>where-did-this-line
 <pre><code class="language-md">&lt;div class=&quot;tabbed-blocks&quot;&gt;
 
 &lt;div class=&quot;tabbed-block&quot; data-tab-title=&quot;Video demonstration&quot;&gt;
-  &lt;div id=&quot;demo&quot;&gt;&lt;/div&gt;
-  &lt;script&gt;
-  document.addEventListener(&quot;DOMContentLoaded&quot;, function(){
-      addAsciinemaPlayer('where-did-this-line-come-from.cast', 'demo');
-  });
-  &lt;/script&gt;
+  &lt;div id=&quot;demo&quot; data-cast-file=&quot;where-did-this-line-come-from.cast&quot;&gt;&lt;/div&gt;
 &lt;/div&gt;
 
 &lt;/div&gt;
