Deploy preview for PR 44 🛫

--- a/pr-preview/pr-44/using-git/choosing-your-git-editor.html
+++ b/pr-preview/pr-44/using-git/choosing-your-git-editor.html
@@ -175,6 +175,15 @@ It is entirely separate from your choice of editor for any other task, such as w
   </ol>
 </div>
 </div>
+<div id="admonition-note" class="admonition note">
+<div class="admonition-title">
+<p>Note</p>
+<p><a class="admonition-anchor-link" href="#admonition-note"></a></p>
+</div>
+<div>
+<p>You can pause the video to <strong>select and copy any of the text</strong>, such as the <code> git config --global core.editor</code> commands.</p>
+</div>
+</div>
 <h2 id="how-to-use-nano"><a class="header" href="#how-to-use-nano">How to use nano</a></h2>
 <p>Once you have written your commit message, press <kbd>Ctrl</kbd> + <kbd>O</kbd> and then <kbd>Enter</kbd> to save the commit message, then press <kbd>Ctrl</kbd> + <kbd>X</kbd> to quit the editor.</p>
 <p><strong>To quit without saving</strong> press <kbd>Ctrl</kbd> + <kbd>X</kbd>.
