Deploy preview for PR 49 🛫

--- a/pr-preview/pr-49/print.html
+++ b/pr-preview/pr-49/print.html
@@ -2446,6 +2446,16 @@ The <a href="https://www.communityofpractice.ca/background/what-is-a-community-o
 <p>We are planning to organise a <em>Community of Practice</em> that is open to researchers who share an interest in <strong>reproducible research and/or related topics and practices</strong>.
 This includes — but is not limited to — any interested persons across the
 <a href="https://www.spectrum.edu.au/">SPECTRUM</a> and <a href="https://www.spark.edu.au/">SPARK</a> networks.</p>
+<div id="admonition-tip" class="admonition tip">
+<div class="admonition-title">
+<p>Tip</p>
+<p><a class="admonition-anchor-link" href="community/index.html#admonition-tip"></a></p>
+</div>
+<div>
+<p>No prior knowledge is required in order to participate.
+You only need an interest in (collectively) improving how we develop our scientific code.</p>
+</div>
+</div>
 <ul>
 <li>
 <p>We envision holding <strong>monthly meetings</strong>.
