--- a/pr-preview/pr-49/print.html
+++ b/pr-preview/pr-49/print.html
@@ -2471,6 +2471,32 @@ These notes will serve a resource for improving the existing materials and devel
 </li>
 </ul>
 <p>In this way, we will ensure that the community acts as a <strong>living curriculum</strong> and make this curriculum publicly available.</p>
+<h2 id="meeting-times"><a class="header" href="#meeting-times">Meeting times</a></h2>
+<div id="admonition-note" class="admonition note">
+<div class="admonition-title">
+<p>Note</p>
+<p><a class="admonition-anchor-link" href="community/index.html#admonition-note"></a></p>
+</div>
+<div>
+<p>The <a href="https://www.timeanddate.com/worldclock/meeting.html">World Clock Meeting Planner</a> is helpful for scheduling meetings across multiple time zones.</p>
+</div>
+</div>
+<p>We aim meet within <strong>normal business hours</strong> (9am-5pm) across the following time zones:</p>
+<ul>
+<li>UTC+7: Western Indonesia, Thailand</li>
+<li>UTC+8: Central Indonesia, Philippines, Singapore, Western Australia</li>
+<li>UTC+9: Eastern Indonesia</li>
+<li>UTC+9:30: Central Australia (no DST)</li>
+<li>UTC+10: Eastern Australia (no DST)</li>
+<li>UTC+12: New Zealand (no DST)</li>
+</ul>
+<p>Daylight savings in Australia and New Zealand ends on 2 April 2023.
+Relative to AEST (Eastern Australia) this means that meetings should start:</p>
+<ul>
+<li><strong>No earlier than 12 noon</strong> to accommodate Thailand and Indonesia; and</li>
+<li><strong>No later than 2pm</strong> to accommodate New Zealand.</li>
+</ul>
+<p>Depending on participant availability, we may need to extend our window to 8am-6pm.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="how-to-contribute-1"><a class="header" href="#how-to-contribute-1">How to contribute</a></h1>
 <h2 id="add-a-case-study"><a class="header" href="#add-a-case-study">Add a case study</a></h2>
 <p>If you've made use of Git in your research activities, <strong>please let us know!</strong>
