Deploy preview for PR 50 🛫

--- a/pr-preview/pr-50/community/meetings/2023-04-17.html
+++ b/pr-preview/pr-50/community/meetings/2023-04-17.html
@@ -159,6 +159,25 @@ The goal is to welcome people to the community and outline how we envision runni
 <h2 id="theme-reproducible-research"><a class="header" href="#theme-reproducible-research">Theme: Reproducible Research</a></h2>
 <p>Outline the theme and scope for this community.</p>
 <p>This is open to all researchers who share an interest in reproducible research and/or related topics and practices; <strong>no prior knowledge is required</strong>.</p>
+<p>Reproducible Research is a very broad topic.
+For example, consider these questions:</p>
+<ul>
+<li>
+<p>Can someone else reproduce your current results?</p>
+</li>
+<li>
+<p>Can someone else reproduce your current results without your help?</p>
+</li>
+<li>
+<p>Can you reproduce your own results from, say, 2 years ago?</p>
+</li>
+<li>
+<p>Can someone else reproduce your own results from, say, 2 years ago?</p>
+</li>
+<li>
+<p>Can you fix a mistake and update your own results from, say, 2 years ago?</p>
+</li>
+</ul>
 <h2 id="describe-how-these-meetings-will-run"><a class="header" href="#describe-how-these-meetings-will-run">Describe how these meetings will run</a></h2>
 <ul>
 <li>
